--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -9,3 +9,7 @@ vkontakte:
 twitter:
   id: "yPGkPLAr6K11OKXXW4utQ"
   secret: "OVjS5FrSxBjbHDGZFfBeI3wcArbh9Rdml6tIcCZkA"
+
+github:
+  id: "df1e8e6c0e752de1bf14"
+  secret: "b5281774cfeb2ce328fc57faa85ff9deba91aea5"
