--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -9,3 +9,7 @@ vkontakte:
 twitter:
   id: "86073382-Gm4pW33XjxeqKeXijMkVSrSglcvKnZkAfcSQLHocU"
   secret: "nHPSiTH6BR5LzUcgmm7NRqPmP8pHl6rXnF7e8Yho6DGk4"
+
+github:
+  id: "b1cd9e14158dbffbd3fb"
+  secret: "c983d4d89db3c1cfeaae7b08219b1df3304f5741"
